# QuickSignTest

./: README.md  docker-compose.yml  ingest_batch.py  lint_module.sh  pyproject.toml  setup.sh
app/: config.py  metrics.py  models.py  webservice.py
app/services/: database.py  prediction.py  storage.py
grafana/provisioning/dashboards/: dashboard.yml  ocr-dashboard.json
tests/: test_api_endpoints.py  test_metrics.py  test_services.py  test_webservice.py
